force-app/main/default/objects/Patient__c/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <label>Blood Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>