force-app/main/default/objects/Patient__c/fields/Unpaid_Balance__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unpaid Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>