force-app/main/default/objects/Patient__c/validationRules/DOB_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>Ensures patient Date of Birth cannot be in the future.</description>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>